# Ascend-mskpp

./: .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  build.py  dependencies.json  download_dependencies.py  requirement.txt  setup.py
csrc/: CMakeLists.txt
csrc/core/: CMakeLists.txt  singleton.h
csrc/core/arch/: arch_info.cpp  arch_info.h
csrc/core/task_schedule/: pipeline.cpp  pipeline.h  raw_task.cpp  raw_task.h  task_generator.cpp  task_generator.h  task_schedule.cpp  task_schedule.h
csrc/interface/: CMakeLists.txt  init_arch_module.cpp  init_module.h  init_mskpp_c_module.cpp  init_profdata_module.cpp  init_schedule_module.cpp
csrc/prof_data/: CMakeLists.txt  data_adapter.cpp  data_adapter.h  data_model_define.cpp  data_model_define.h  linearInterpolate.cpp  linearInterpolate.h  resource910b.cpp  resource910b.h
docs/zh/: mskpp_api_reference.md  mskpp_install_guide.md  mskpp_quick_start.md  mskpp_user_guide.md
docs/zh/api_reference/: mskpp_api_reference.md
docs/zh/contributing/: contributing_guide.md
docs/zh/development_guide/: architecture.md  develop_guide.md
docs/zh/install_guide/: mskpp_install_guide.md
docs/zh/legal/: security_statement.md
docs/zh/quick_start/: mskpp_quick_start.md
docs/zh/release_notes/: release_notes.md
docs/zh/user_guide/: attention.md  mskpp_user_guide.md
example/: sample_mmad.py  sample_sync.py  sample_vadd.py
mskpp/: __init__.py  apis.py  sample_diff_core_sync_with_simd_vf.py  sample_simd.py
mskpp/core/: __init__.py  aicore.py  api_register.py  chip.py  computation_instruction.py  instr_task.py  instruction_base.py  memory_instruction.py  prof_data.py  sync_instruction.py  tensor.py  tensor_checker.py  trace.py  vec_scope.py
mskpp/core/common/: __init__.py  checker.py  registries.py  singleton.py
mskpp/core/metric/: __init__.py  cal_metrics.py  cycle_metrics.py  file_system.py  mem_metrics.py  metrics.py  metrics_summary.py  output_tool.py  prof.py  visualization_tool.py
mskpp/intrisic_api/: __init__.py  infer_invoke.py  instr_register.py  instr_strategy.py
mskpp/prof_data/: __init__.py  mmad_prof.py  mov_prof.py  vector_binary_instr_prof.py  vector_unary_instr_prof.py
mskpp/test/cases/: test_fa_grad.py
mskpp/utils/: autotune_utils.py  launcher_utils.py  logger.py  safe_check.py
test/: CMakeLists.txt  generate_coverage.sh  pytest.ini
test/cases/: test_910b_copy.py  test_checker.py  test_chip.py  test_debug_mode_mmad.py  test_diff_core_sync.py  test_mmad.py  test_statistic_info.py  test_tensor.py  test_tensor_slice.py  test_trace_detail.py  test_vadd_normal.py  test_vadds_normal.py  test_vbrcb_normal.py  test_vcadd_normal.py  test_vcgmax_normal.py  test_vcmax_normal.py  test_vconv_normal.py  test_vdiv_normal.py  test_vector_dup_normal.py  test_vector_prefix_a_instr.py  test_vector_prefix_c_instr.py  test_vector_prefix_m_instr.py  test_vector_prefix_r_instr.py  test_vexp_vln_normal.py  test_vgather_normal.py  test_vgatherb_normal.py  test_vlrelu_normal.py  test_vmadd_normal.py  test_vmax_normal.py  test_vmaxs_normal.py  test_vmul_conv_normal.py  test_vmul_normal.py  test_vmuls_normal.py  test_vor_normal.py  test_vrec_normal.py  test_vrsqrt_normal.py  test_vsel_normal.py  test_vshl_normal.py  test_vshr_normal.py  test_vsort_normal.py  (+5 more)
test/csrc_test/: CMakeLists.txt
test/csrc_test/core/: CMakeLists.txt
test/csrc_test/core/arch/: test_arch_info.cpp
test/csrc_test/interface/: CMakeLists.txt  test_init_arch_module.cpp  test_init_profdata_module.cpp  test_init_schedule_module.cpp
test/csrc_test/prof_data/: CMakeLists.txt  test_data_adapter.cpp  test_linearInterpolate.cpp
test/utils/: test_base.py
